--- a/src/scss/components/form/floating_label.scss
+++ b/src/scss/components/form/floating_label.scss
@@ -66,7 +66,7 @@
     }
 
     &.has-value + label,
-    &:not(:placeholder-shown):not(.dropdown) + label {
+    &:not(:placeholder-shown):not(.dropdown):not(.field) + label {
       top: 16px;
       left: 0;
       transform: translateY(-50%) scale(0.9);
@@ -108,7 +108,7 @@
       &:focus + label,
       &.dropdown.show + label,
       &.has-value + label,
-      &:not(:placeholder-shown):not(.dropdown) + label {
+      &:not(:placeholder-shown):not(.dropdown):not(.field) + label {
         left: 35px;
       }
     }
