--- a/src/scss/components/form/range_select.scss
+++ b/src/scss/components/form/range_select.scss
@@ -1,3 +1,141 @@
+.range-select-container {
+  background-color: #fff;
+  border: 1px solid #dce3e6;
+  border-radius: 8px;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
+  margin-right: 12px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: none;
+  -webkit-transition: -webkit-transform 0.2s linear;
+  transition: transform 0.2s linear;
+  display: none;
+  z-index: 9999;
+
+  &:not(.has-nub) {
+    &:before,
+    &:after {
+      position: absolute;
+      display: inline-block;
+      border-bottom-color: rgba(0, 0, 0, 0.2);
+      content: '';
+    }
+
+    &:before {
+      top: -7px;
+      border-right: 7px solid transparent;
+      border-left: 7px solid transparent;
+      border-bottom: 7px solid #dce3e6;
+    }
+
+    &:after {
+      top: -6px;
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid #fff;
+      border-left: 6px solid transparent;
+    }
+
+    &.opens-left {
+      &:before {
+        right: 9px;
+      }
+
+      &:after {
+        right: 10px;
+      }
+    }
+
+    &.opens-center {
+      &:before,
+      &:after {
+        left: 0;
+        right: 0;
+        width: 0;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+
+    &.opens-right {
+      &:before {
+        left: 9px;
+      }
+
+      &:after {
+        left: 10px;
+      }
+    }
+
+    &.drop-up {
+      margin-top: -5px;
+
+      &:before {
+        top: initial;
+        bottom: -7px;
+        border-bottom: initial;
+        border-top: 7px solid #dce3e6;
+      }
+
+      &:after {
+        top: initial;
+        bottom: -6px;
+        border-bottom: initial;
+        border-top: 6px solid #fff;
+      }
+    }
+  }
+
+  &.has-nub .range-select-nub {
+    margin: 0;
+    position: absolute;
+    left: 100%;
+    top: 0;
+
+    &:after,
+    &:before {
+      content: '';
+      height: 0;
+      left: 0;
+      position: absolute;
+      width: 0;
+    }
+
+    &:after {
+      border: 10px solid transparent;
+      border-bottom-width: 5px;
+      border-top-width: 5px;
+      border-left-color: #fff;
+      top: -5px;
+    }
+
+    &:before {
+      border: 12px solid transparent;
+      border-bottom-width: 6px;
+      border-top-width: 6px;
+      border-left-color: #dce3e6;
+      top: -6px;
+    }
+  }
+}
+
+@media (max-width: 991.98px) {
+  .range-select-container {
+    position: relative;
+    margin: 0 -30px;
+    padding: 0 30px;
+    border: none;
+    box-shadow: none;
+
+    &:not(.has-nub) {
+      &:before,
+      &:after {
+        border: none;
+      }
+    }
+  }
+}
+
 .range-select {
   display: flex;
   padding: 8px;
@@ -83,45 +221,6 @@
   }
 }
 
-.show-calendar {
-  .range-select-date-range .filter-calendar {
-    display: block;
-  }
-}
-
-.single {
-  .range-select-date-range {
-    .filter-calendar.to-date-selector,
-    .filter-calendar-button-panel {
-      display: none;
-    }
-  }
-
-  .range-select {
-    .range-select-range-field {
-      display: none;
-    }
-
-    .range-select-content > div > .calendar {
-      border: none;
-    }
-  }
-}
-
-.range-select-tags-range {
-  .tag-collection {
-    height: 100px;
-    overflow: hidden;
-    overflow-y: scroll;
-    padding-right: 15px;
-    margin-top: 10px;
-
-    > .tag {
-      display: block;
-    }
-  }
-}
-
 @media (max-width: 991.98px) {
   .range-select-date-range {
     .range-select-content {
@@ -146,6 +245,72 @@
       > .calendar {
         display: none;
       }
+    }
+  }
+}
+
+.range-select-footer {
+  height: 60px;
+  border-top: 1px solid #dce3e6;
+  padding: 15px 0 10px;
+  margin: 0 -8px;
+
+  .btn {
+    float: right;
+    margin: 0 10px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .range-select-footer {
+    display: block;
+    padding-top: 10px;
+  }
+}
+
+
+.show-calendar {
+  .range-select-date-range .filter-calendar {
+    display: block;
+  }
+}
+
+.range-select-tags-range {
+  .tag-collection {
+    height: 100px;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding-right: 15px;
+    margin-top: 10px;
+
+    > .tag {
+      display: block;
+    }
+  }
+}
+
+.single {
+  .range-select-date-range {
+    .filter-calendar.to-date-selector,
+    .filter-calendar-button-panel,
+    .range-select-footer {
+      display: none;
+    }
+  }
+
+  .range-select {
+    .range-select-range-field {
+      display: none;
+    }
+
+    .range-select-content > div > .calendar {
+      border: none;
+    }
+  }
+
+  .range-select-tags-range {
+    .range-select-footer {
+      border-bottom: none;
     }
   }
 }
