--- a/src/scss/layout/admin/index.scss
+++ b/src/scss/layout/admin/index.scss
@@ -12,7 +12,7 @@
 @import '../../components/table/index';
 @import '../../components/list_page';
 @import '../../components/filter';
-@import '../../components/drawer/index';
+@import '../../components/drawer';
 @import '../../components/card/index';
 @import '../../components/chart';
 @import '../../components/profile';
