--- a/src/scss/components/modal/layout.scss
+++ b/src/scss/components/modal/layout.scss
@@ -72,6 +72,12 @@
   word-wrap: break-word;
   z-index: 1;
 
+  .sub-header {
+    color: #0C0D0D;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
   &.modal-slim-header {
     border: none;
     box-shadow: none;
