--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -4,9 +4,7 @@
 }
 
 .activity-list-filter {
-  position: absolute;
-  right: 0;
-  top: 10px;
+  text-align: right;
 
   .dropdown-selected {
     font-weight: 500;
@@ -17,7 +15,6 @@
   color: #696e6f;
   display: inline-block;
   font-weight: 400;
-  height: 28px;
   line-height: 24px;
   overflow: hidden;
   font-size: 12px;
