Force min-height for floating label field

--- a/src/scss/components/form/floating_label.scss
+++ b/src/scss/components/form/floating_label.scss
@@ -27,6 +27,7 @@
     padding: 22px 16px 10px;
     transition: 0.1s ease-out;
     height: 56px;
+    min-height: 56px;
 
     &.dropdown-multiple {
       height: auto;
