Override bootstrap popover style

--- a/src/scss/layout/admin/index.scss
+++ b/src/scss/layout/admin/index.scss
@@ -1,6 +1,7 @@
 @import '../../components/reset';
 @import '../../components/toaster';
 @import '../../components/tooltip';
+@import '../../components/popover';
 @import '../../components/spinner';
 @import '../../components/banner';
 @import '../../components/badge';
