--- a/src/scss/components/table/cardgrid.scss
+++ b/src/scss/components/table/cardgrid.scss
@@ -105,10 +105,9 @@
 
     .title {
       font-size: 13px;
-      line-height: 24px;
-      font-weight: 700;
+      font-weight: 600;
+      line-height: normal;
       color: #0c0d0d;
-      text-transform: uppercase;
       width: 100%;
       overflow: hidden;
       white-space: nowrap;
@@ -117,8 +116,9 @@
     }
 
     .total {
-      font-size: 12px;
-      line-height: 20px;
+      font-size: 13px;
+      font-weight: 600;
+      line-height: normal;
       color: #696e6f;
     }
   }
