--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -289,8 +289,9 @@
 
 @media (max-width: 991.98px) {
   .list-page-chart {
-    margin-left: 16px;
-    margin-right: 16px;
+    height: -webkit-calc(100% - 144px);
+    height: calc(100% - 144px);
+    margin: 0 16px 16px;
   }
 }
 
