Updated cardgrid look

--- a/src/scss/components/table/cardgrid.scss
+++ b/src/scss/components/table/cardgrid.scss
@@ -4,23 +4,6 @@
   max-width: 100%;
   position: relative;
 
-  .datagrid-header-container .datagrid-table-fixed-wrapper,
-  .datagrid-body-container .datagrid-table-row.datagrid-hover {
-    background-color: transparent;
-    box-shadow: none;
-    overflow: unset;
-  }
-
-  .datagrid-fixed-table-container.datagrid-header-container {
-    background-color: transparent;
-    box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
-    border-radius: 8px 8px 0px 0px;
-  }
-
-  .datagrid-table-row {
-    cursor: default;
-  }
-
   &.is-dragging {
     cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), move;
     cursor: -webkit-grabbing;
@@ -36,23 +19,34 @@
     }
   }
 
-  .cell {
-    padding: 10px 5% 10px 30px;
+  .datagrid-tables-container,
+  .datagrid-header-container,
+  .datagrid-body-container .datagrid-table-row.datagrid-hover {
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
   }
 
-  .datagrid-header-row {
-    background-color: #fff;
-    border-top: 1px solid #dce3e6;
-    border-bottom: 1px solid #dce3e6;
+  .datagrid-header-container {
+    overflow: hidden;
+    padding: 16px 16px 0;
+
+    .datagrid-table-fixed-wrapper {
+      background-color: #fff;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+      border-radius: 8px 8px 0px 0px;
+      border-bottom: 1px solid #dce3e6;
+    }
+  }
+
+  .datagrid-table-row {
+    cursor: default;
+    overflow-x: hidden !important;
   }
 
   .datagrid-header-cell {
-    .carrot.active,
-    &.active .carrot {
-      display: none;
-    }
-
     background-color: #fff;
+    padding-bottom: 16px;
 
     &:hover {
       background-color: #fff;
@@ -64,7 +58,11 @@
       border-color: #7b7b7b;
 
       * {
-        color: #fff;
+        color: #fff !important;
+      }
+
+       .carrot {
+        display: none;
       }
     }
 
@@ -77,6 +75,10 @@
       background: transparent url('../../../images/card-header-carrot.png') center right no-repeat;
       width: 12px;
       height: 60px;
+
+      &.active {
+        display: none;
+      }
     }
 
     &.active .carrot.active {
@@ -99,11 +101,24 @@
     height: 100%;
     display: flex;
     align-items: center;
+
+    .header-gradient {
+      position: absolute;
+      bottom: 16px;
+      width: 100%;
+      height: 8px;
+      opacity: 0.06;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000);
+    }
   }
 
   .header-cell {
     overflow: hidden;
     padding: 5px 5% 5px 40px;
+
+    &.cell {
+      padding: 10px 5% 10px 30px;
+    }
 
     .title {
       font-size: 13px;
@@ -126,51 +141,37 @@
   }
 
   &.cardgrid-columns {
-    .datagrid-fixed-table-container.datagrid-header-container {
-      border: none;
+    .datagrid-header-container {
+      padding: 0;
+
+      .datagrid-table-fixed-wrapper {
+        background-color: transparent;
+        box-shadow: none;
+        border: none;
+      }
     }
 
-    .datagrid-header-row {
+    .datagrid-header-cell {
       background-color: transparent;
-      border: none;
+      padding: 16px 16px 0;
 
-      .datagrid-header-cell {
-        background-color: transparent;
-        padding-right: 16px;
+      .table-header-cell-content {
+        background-color: #fff;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+        border-radius: 8px 8px 0px 0px;
 
-        &:last-child {
-          padding-right: 0;
-        }
-
-        .table-header-cell-content {
-          background-color: #fff;
-          box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
-          border-radius: 8px 8px 0px 0px;
-        }
-
-        &.active .table-header-cell-content {
-          z-index: 1;
-          background-color: #7b7b7b;
-          border-color: #7b7b7b;
-
-          * {
-            color: #fff;
-          }
+        .header-gradient {
+          bottom: 0;
+          width: calc(100% - 32px);
         }
       }
     }
   }
 }
 
-.datagrid-cell {
-  :last-child .cardgrid-component-model-cell {
-    padding-right: 0 !important;
-  }
-
-  &.is-last .cell-content {
-    border-radius: 0 0 8px 8px;
-    border-bottom: none !important;
-  }
+.datagrid-cell.is-last .cell-content {
+  border-radius: 0 0 8px 8px;
+  border-bottom: none !important;
 }
 
 .cardgrid-component-model-cell {
@@ -179,15 +180,15 @@
   cursor: -moz-grab;
   cursor: -webkit-grab, -moz-grab, url(https://mail.google.com/mail/images/2/openhand.cur), move;
   position: relative;
-  padding-right: 16px;
   height: 100%;
+  padding: 0 16px;
 
   .cell-content {
     height: 100%;
     position: relative;
     padding: 16px 20px;
     border-bottom: 1px solid rgba(144, 151, 153, 0.16);
-    box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
     background-color: #fff;
 
     &:hover {
