--- a/src/scss/components/form/form_wizard.scss
+++ b/src/scss/components/form/form_wizard.scss
@@ -49,7 +49,7 @@
 
   .step-number {
     background-color: #f0f0f0;
-    border: 1px solid #f0f0f0;
+    border: 2px solid #f0f0f0;
     border-radius: 100% 100% 100% 100%;
     color: rgba(0, 0, 0, 0.32);
     display: inline-block;
@@ -65,6 +65,7 @@
   .step {
     > div {
       &.selected .step-number {
+        background-color: #fff;
         border-color: #1350aa;
         color: #1350aa;
       }
