Reset navigation selected item border color

--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -145,7 +145,7 @@
 
       &.is-active {
         background: transparent;
-        border-bottom: 4px solid #4a4060;
+        border-bottom: 4px solid #545454;
         border-radius: 2px;
 
         > a {
