Removed background and border from popover header and bump version 2.0.59

--- a/src/scss/components/popover.scss
+++ b/src/scss/components/popover.scss
@@ -8,4 +8,9 @@
   > .arrow::before {
     border-width: 0;
   }
+
+  .popover-header {
+    background-color: transparent;
+    border-bottom: none;
+  }
 }
