--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -89,7 +89,7 @@
 }
 
 .activity-item-header {
-  color: #dce3e6;
+  color: #696e6f;
   font-size: 13px;
   line-height: 20px;
   padding: 20px 50px 0 0;
