Changed card title font and color

--- a/src/scss/components/card/layout.scss
+++ b/src/scss/components/card/layout.scss
@@ -16,6 +16,9 @@
 
 .card-title {
   flex: 0 0 auto;
+  font-size: 15px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.32);
 }
 
 .card-subheader {
