Updated activity timeline view

--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -474,6 +474,17 @@
 
   .activity-item {
     border-top: none;
+    min-height: 54px;
+
+    &:not(.is-labeled) {
+      .activity-item-profile-image {
+        margin-top: 0;
+      }
+
+      .activity-item-header {
+        padding-top: 0;
+      }
+    }
   }
 
   .activity-item-profile-section {
