Reset cursor when ignore-row-select and bump version 2.0.63

--- a/src/scss/components/table/datagrid.scss
+++ b/src/scss/components/table/datagrid.scss
@@ -162,6 +162,10 @@
   }
 }
 
+.datagrid-tables-container[data-ignore-row-select="1"] .datagrid-table-row {
+  cursor: default;
+}
+
 .datagrid-table-row > div {
   height: 100%;
   box-sizing: border-box;
